# glslang

./: meson.build  meson_options.txt
OGLCompilersDLL/: meson.build
SPIRV/: meson.build
glslang/: meson.build
glslang/GenericCodeGen/: meson.build
glslang/MachineIndependent/: meson.build
glslang/MachineIndependent/preprocessor/: meson.build
glslang/OSDependent/: meson.build
glslang/OSDependent/Unix/: meson.build
glslang/OSDependent/Windows/: meson.build
hlsl/: meson.build
hlsl/meson-pch/: pch.h
