
glslang_src += files(
    'Constant.cpp',
    'InfoSink.cpp',
    'Initialize.cpp',
    'IntermTraverse.cpp',
    'Intermediate.cpp',
    'ParseContextBase.cpp',
    'ParseHelper.cpp',
    'PoolAlloc.cpp',
    'RemoveTree.cpp',
    'Scan.cpp',
    'ShaderLang.cpp',
    'SymbolTable.cpp',
    'Versions.cpp',
    'attribute.cpp',
    'glslang_tab.cpp',
    'intermOut.cpp',
    'iomapper.cpp',
    'limits.cpp',
    'linkValidate.cpp',
    'parseConst.cpp',
    'propagateNoContraction.cpp',
    'reflection.cpp',
)

subdir('preprocessor')
